--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -71,12 +71,14 @@ a {
 
 /*this is the general style for buttons*/
 .btn{
+
 	/*reset style*/
 	padding: 0.5em 1em;
 	outline: none;
 	border-radius: 3px;
 	white-space: nowrap;
 	cursor: pointer;
+	color: var(--color-accent-whiteblack);
 
 	/*style text*/
 	font-weight: normal;
@@ -182,6 +184,7 @@ todo: reutrn top visiblity fade when not at top
 
 #db-toggle-container {
 	margin-left: 30px;
+	margin-right: 30px;
 }
 
 #db-styling-container {
@@ -192,8 +195,6 @@ todo: reutrn top visiblity fade when not at top
 	letter-spacing: normal;
 	text-transform: none;
 }
-
-
 
 #dark-mode-toggle-container::before{
 	/*sets icon to moon*/
@@ -378,41 +379,19 @@ todo: reutrn top visiblity fade when not at top
 *****************************/
 
 .movie-container {
-	/*
-	this div, and only this div, is positioned above sidebar menu
-	even though sidebar menu has higher z-index
-	unsure why
-	could be something within this card itself, or the parents
-
-	fixed by adding z-index: 1; to sidebar
-	*/
-
-	/*width: 65%;*/
-	/*height: 165px;*/
-	/*background-color: var(--background-grey);*/
-	/*border-radius: 5px;*/
-	/*border: 1px solid grey;*/
-	/*margin: 15px auto 0;*/
-	/*text-align: left;*/
-
-	/*display: flex;*/
-	/*flex-direction: row;*/
-	/*justify-content: space-between;*/
-
-	/*box-shadow: 0 0 1px rgba(0, 0, 0, 0);*/
-	/*transition-duration: 0.3s;*/
-	/*transition-property: transform;*/
-
-	position: relative;
-	width: 100%;
-	height: 160px;
-	margin: 5px auto;
+	width: 65%;
+	height: 165px;
 	background-color: var(--color-background-grey);
+	margin: 15px auto 0;
 	text-align: left;
 
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	transition-duration: 0.3s;
+	transition-property: transform;
 }
 
 .movie-container img {
@@ -646,18 +625,18 @@ todo: reutrn top visiblity fade when not at top
 
 
 #favourite-movies-container{
-	background-color: var(--color-background-secondary);
-	padding: 0 25px;
+
+	/*gradient background, top matching navbar color*/
+	background: var(--color-background-secondary);
+	background: linear-gradient(180deg, var(--color-background-secondary) 15%, var(--color-background-main) 54%);
+
 	width: 35%;
 	min-height: 100vh;
-
-	border-top: black solid 3px;
-	border-left: black solid 3px;
 
 	position: absolute;
 	right: 0;
 	top: 80px;
-	/*#navbar height: x. x = top*/
+	/*#navbar height: top*/
 
 	overflow-y: auto;
 }
@@ -667,6 +646,9 @@ todo: reutrn top visiblity fade when not at top
 	flex-direction: column;
 	align-items: center;
 	justify-content: start;
+
+	padding: 0px 25px;
+
 
 }
 
@@ -908,11 +890,16 @@ hr {
 	}
 
 	.movie-container {
-		width: 94%;
+		position: relative;
+		width: 100%;
 		height: 160px;
-		margin-top: 15px;
-		box-shadow: none;
-		transition-property: none;
+		margin: 5px auto;
+		background-color: var(--color-background-grey);
+		text-align: left;
+
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
 	}
 
 	.movie-container:hover,
