--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -53,7 +53,7 @@ html {
 	background-size: cover;
 	color: var(--color-accent-whiteblack);
 	font-family: var(--fontface-standard);
-	background-color: var(--color-background-secondary);
+	background-color: var(--color-background-main);
 	text-align: center;
 	margin: 0;
 }
@@ -116,8 +116,8 @@ a {
 }
 
 #container {
-	background: rgb(255,228,179);
-	background: linear-gradient(180deg, rgba(255,228,179,1) 59%, rgba(244,203,132,1) 84%);
+	background: var(--color-background-main);
+	background: linear-gradient(180deg, var(--color-background-secondary) 59%, var(--color-background-main) 84%);
 }
 
 /*****************************
@@ -159,7 +159,7 @@ todo: reutrn top visiblity fade when not at top
 
 #site-name{
 	font-family: var(--fontface-title);
-	font-size: var(--fontsize-title-smaller);
+	font-size: var(--fontsize-title);
 	font-weight: var(--fontweight-title);
 
 	margin-right: auto;
@@ -167,26 +167,27 @@ todo: reutrn top visiblity fade when not at top
 
 }
 
-.fa-database{
-	font-size: 24px;
-	margin-right: var(--icon-distance);
+#db-toggle-container {
+	margin-left: 30px;
+	margin-right: 30px;
 }
 
 #db-styling-container:before {
 	font-family: "Font Awesome 5 Free", serif;
 	content: "\f004";
 	font-style: normal;
-	font-size: 20px;
+	font-size: 30px;
 	margin-right: var(--icon-distance-secondary);
 }
 
-#return-to-top-container{
+#return-to-top-container:before {
 	margin-left: 30px;
-}
 
-#db-toggle-container {
-	margin-left: 30px;
-	margin-right: 30px;
+	font-family: "Font Awesome 5 Free", serif;
+	content: "\f35b";
+	font-style: normal;
+	font-weight: normal;
+	font-size: 40px;
 }
 
 #db-styling-container {
@@ -203,8 +204,8 @@ todo: reutrn top visiblity fade when not at top
 	font-family: "Font Awesome 5 Free", serif;
 	content: "\f186";
 	font-style: normal;
-	font-weight: bold;
-	font-size: 20px;
+	font-weight: normal;
+	font-size: 40px;
 
 	margin-left: 30px;
 }
@@ -271,7 +272,7 @@ todo: reutrn top visiblity fade when not at top
 
 .result-container{
 	margin-top: 10px;
-	padding: 7px;
+	/*padding: 7px;*/
 }
 
 /*****************************
@@ -629,7 +630,7 @@ todo: reutrn top visiblity fade when not at top
 #favourite-movies-container{
 
 	/*gradient background, top matching navbar color*/
-	background: var(--color-background-secondary);
+	background: var(--color-background-main);
 	background: linear-gradient(180deg, var(--color-background-secondary) 15%, var(--color-background-main) 54%);
 
 	width: 35%;
@@ -853,9 +854,8 @@ hr {
 @media screen and (max-width: 1300px) {
 	#container {
 		/*this selection lowers the gradient so the upper section is covered by var(bg-sec)*/
-		background: rgb(255, 228, 179);
-		background: linear-gradient(180deg, rgba(255,228,179,1) 51%, rgba(244,203,132,1) 69%);
-
+		background: var(--color-background-main);
+		background: linear-gradient(180deg, var(--color-background-secondary) 30%, var(--color-background-main) 58%);
 	}
 	.btn {
 		background-color: var(--color-accent-main);
@@ -870,6 +870,22 @@ hr {
 	.curved {
 		height: 450px;
 		/*need to change for mobile too*/
+	}
+
+	#site-name {
+		font-size: var(--fontsize-title-small);
+	}
+
+	#db-styling-container:before {
+		font-size: 20px;
+	}
+
+	#return-to-top-container:before {
+		font-size: 35px;
+	}
+
+	#dark-mode-toggle-container::before{
+		font-size: 30px;
 	}
 
 	#title {
