--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -272,7 +272,7 @@ todo: reutrn top visiblity fade when not at top
 
 .result-container{
 	margin-top: 10px;
-	/*padding: 7px;*/
+	padding: 7px;
 }
 
 /*****************************
