fixed 'save' button position issue

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -382,6 +382,7 @@ todo: reutrn top visiblity fade when not at top
 *****************************/
 
 .movie-container {
+	position: relative;
 	width: 65%;
 	height: 165px;
 	background-color: var(--color-background-grey);
