--- a/quix/css/main.css
+++ b/quix/css/main.css
@@ -239,18 +239,25 @@ todo: reutrn top visiblity fade when not at top
    Img, title search bar and result container
    ========================================================================== */
 
-#site-title{
-  margin: 25px 0 15px 0;
+#title-container {
+  position: sticky;
+  top: 1em;
+  z-index: 1;
+  display: inline-block;
+
+  margin-top: 1em;
 }
 
 #title{
-  font-size: var(--fontsize-title);
   font-family: var(--fontface-title);
+  font-size: var(--fontsize-title);
   font-weight: var(--fontweight-title);
 }
 
 #subtitle-flex-container {
-  display: inline-flex;
+  margin: 5px 0 15px 0;
+
+  display: flex;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
   height: 46px;
@@ -263,6 +270,10 @@ todo: reutrn top visiblity fade when not at top
 
 #search-box:focus, #search-form button{
   outline: none;
+}
+
+#logo {
+  display: block;
 }
 
 #logo img {
@@ -684,6 +695,7 @@ todo: reutrn top visiblity fade when not at top
   top: 80px;
   /*#navbar height: top*/
 
+  z-index: 1;
   overflow-y: auto;
 }
 
@@ -936,22 +948,17 @@ hr {
   }
 
   #title {
-    font-size: var(--fontsize-title-smallest);
+    font-size: var(--fontsize-title-small);
   }
 
   #subtitle {
-    font-size: var(--fontsize-text-large);
-    vertical-align: center;
+    font-size: var(--fontsize-title-smallest);
+    /*vertical-align: center;*/
   }
 
   #logo img {
     width: 45vw;
     height: 45vw;
-
-    /*center, prevent #title same line*/
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   #main-search-button {
