fixing trashcan issue

--- a/quix/css/main.css
+++ b/quix/css/main.css
@@ -677,7 +677,7 @@ todo: reutrn top visiblity fade when not at top
   /*gradient background, top matching navbar color*/
   background: var(--color-background-main);
   background: linear-gradient(180deg, var(--color-background-secondary) 15%, var(--color-background-main) 54%);
- 
+
   width: 35%;
   position: absolute;
   right: 0;
@@ -690,8 +690,7 @@ todo: reutrn top visiblity fade when not at top
   */
   height: calc(100vh - 80px);
   overflow-y: auto;
-
-
+  overflow-x: hidden;
 }
 
 #favourite-movies-flex-container{
@@ -865,26 +864,41 @@ hr {
 /*https://www.youtube.com/watch?v=dhLcyBCJ0r4*/
 
 #favourite-movies-list{
-  list-style-type: none;
   font-size: 18px;
-
 }
 
-#favourite-movie-li{
+.list-flex-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
   margin-bottom: 20px;
-  text-align: left;
+  min-width: 85%;
+  width: auto;
+
+/*  todo, stop width overflow*/
 }
 
-#favourite-movie-li .fa-star {
+.favourite-movie-li{
+  /*margin-bottom: 20px;*/
+  margin-right: auto;
+}
+
+.delete-span-container {
+  margin-left: auto;
+  /*flex-basis: 33%;*/
+  /*flex-shrink: 0;*/
+}
+
+.favourite-movie-li .fa-star {
   color: var(--gold);
   margin-left: 8px;
   text-shadow: 0 0 3px #000;
 }
 
-#favourite-movie-li .fa-trash{
-  margin-left: 8px;
-  float: right;
-  /*display: none;*/
+.favourite-movie-li .fa-trash{
+  /*margin-left: 8px;*/
   color: var(--color-accent-main);
 }
 
@@ -898,7 +912,7 @@ hr {
    ========================================================================== */
 
 @media (hover: hover) {
-  .favourite-movie-anchor:hover, #scroll-to-top-container, #show-favourite-movies:hover, #cancel:hover, #save:hover, #sign-out:hover, #favourite-movie-li .fa-trash:hover, #scroll-to-top-container, #dark-mode-toggle-container, #db-toggle-container {
+  .favourite-movie-anchor:hover, #scroll-to-top-container, #show-favourite-movies:hover, #cancel:hover, #save:hover, #sign-out:hover, .favourite-movie-li .fa-trash:hover, #scroll-to-top-container, #dark-mode-toggle-container, #db-toggle-container {
     cursor: pointer;
   }
   .close:hover{
@@ -1067,7 +1081,7 @@ hr {
 
   }
 
-  #favourite-movie-li .fa-trash {
+  .favourite-movie-li .fa-trash {
     font-size: 25px;
   }
 }
